# UTF

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  utf-test.cpp  utf.h  utf.hpp  utf_getline.h
